Bug 482732 - Creating a new file on the Desktop shows a dialog with "plasmashell" title
Summary: Creating a new file on the Desktop shows a dialog with "plasmashell" title
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 6.0.0
Platform: Neon Linux
: NOR minor
Target Milestone: ---
Assignee: KIO Bugs
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-03-07 15:32 UTC by bruno
Modified: 2024-03-08 18:39 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: Frameworks 6.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description bruno 2024-03-07 15:32:26 UTC
SUMMARY
Creating a new file on the Desktop shows a dialog with "plasmashell" title.

STEPS TO REPRODUCE
1. Right click on the Desktop
2. Navigate to Create New > Text File...

OBSERVED RESULT
Dialog asking for the file name has a nice user-friendly title, consistent to that of the dialog that pops up when "Folder..." is clicked in the submenu instead (having the title "New Folder").

EXPECTED RESULT
Dialog's title isn't set, resulting in "plasmashell" being shown.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: KDE Neon 6.0
KDE Plasma Version: 6.0.0
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2

ADDITIONAL INFORMATION
/
Comment 1 Bug Janitor Service 2024-03-07 15:47:17 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/1570
Comment 2 Nicolas Fella 2024-03-08 10:09:46 UTC
Git commit a6447b24c82e81041da4b35e848ff3fc7aa793ee by Nicolas Fella.
Committed on 08/03/2024 at 09:45.
Pushed by nicolasfella into branch 'master'.

[knewfilemenu] Add window title for new file dialog

M  +1    -0    src/filewidgets/knewfilemenu.cpp

https://invent.kde.org/frameworks/kio/-/commit/a6447b24c82e81041da4b35e848ff3fc7aa793ee