[knewfilemenu] Add window title for new file dialog

BUG: 482732