src/filewidgets/knewfilemenu.cpp
@@ -425,6 +425,7 @@ void KNewFileMenuPrivate::initDialog()
     m_fileDialog->setAttribute(Qt::WA_DeleteOnClose);
     m_fileDialog->setModal(m_modal);
     m_fileDialog->setSizePolicy(QSizePolicy::Expanding, QSizePolicy::Minimum);
+    m_fileDialog->setWindowTitle(i18nc("@title:window", "New File"));
 
     m_messageWidget = new KMessageWidget(m_fileDialog);
     m_messageWidget->setCloseButtonVisible(false);
